tests/vendor/valid/simple/exp_then_decl.c
//expect 1
//tags: simple, variables
int main() {
    int a = -2593;
    a = a % 3;
    int b = -a;
    return b;
}